@@ -11,12 +11,15 @@ class ActiveRecord::NamedScope::Scope
   #----------------------------------------------------------------------------
   def visible_to(user)
     delete_if do |item|
-      if item.is_a?(Activity) && item.subject.respond_to?(:access) # NOTE: Tasks don't have :access as of yet.
-        (item.subject.access == "Private" && item.subject.user_id != user.id && item.subject.assigned_to != user.id) ||
-        (item.subject.access == "Shared"  && !item.subject.permissions.map(&:user_id).include?(user.id))
-      else
-        false
+      is_private = false
+      if item.is_a?(Activity)
+        subject = item.subject || item.subject_type.constantize.find_with_deleted(item.subject_id)
+        if subject.respond_to?(:access) # NOTE: Tasks don't have :access as of yet.
+          is_private = subject.user_id != user.id && subject.assigned_to != user.id &&
+            (subject.access == "Private" || (subject.access == "Shared" && !subject.permissions.map(&:user_id).include?(user.id)))
+        end
       end
+      is_private
     end
   end
 
