@@ -4,9 +4,13 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Thu, Apr 23, 2009
+---------------------------------------------------------------------
+- Filter activities based on asset permissions, even for deleted assets.
+
 Wed, Apr 22, 2009
 ---------------------------------------------------------------------
-- Filter activities based on asset's permissions (existing assets only so far).
+- Filter activities based on asset permissions (existing assets only so far).
 
 Tue, Apr 21, 2009
 ---------------------------------------------------------------------
